@startuml Diagramme de classes métiers BD SAE3.01
skinparam ClassFontSize 24

class Produit
class CategTaille 
class GuideTaille
class Categorie 
class Client 
class Commande 
class Paiement
class CB 
class Paypal 
class VirementBancaire
class Commander 
class Avis

Produit "*" -- "1" Categorie: Appartenir
Paypal "1" -- "1" Paiement : Payer avec Paypal
CB "1" -- "1" Paiement : Payer avec CB
Paiement "1" -- "*" Commande : Régler la commande
Produit "*" - "*" Commande
(Produit, Commande) -- Commander
Commande "*" -- "1" Client: Passer
Avis "*" -- "1" Produit: Concerner
GuideTaille "1" - "*" Produit
(GuideTaille, Produit) -- CategTaille
Avis "*" -- "1" Client: Ecrire
VirementBancaire "1" -- "1" Paiement : Payer avec Virement

@enduml

